fix evil microsoft(tm) scrollbars in ops

--- a/app/assets/stylesheets/layout/admin/nav.scss
+++ b/app/assets/stylesheets/layout/admin/nav.scss
@@ -1,5 +1,8 @@
 body.admin {
   .column-set .left-col.collapsible-nav {
+    &, nav {
+      overflow: auto;
+    }
     header, nav ul li a {
       display: inline-block;
       white-space: nowrap;
